k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heart-api
  labels:
    app: heart-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heart-api
  template:
    metadata:
      labels:
        app: heart-api
    spec:
      containers:
        - name: heart-api
          image: a01-mlops:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
