k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-api
spec:
  selector:
    app: heart-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
